Added search functionality to dropdown filters and improved date filters.
Implemented a search feature to dropdown filters to enhance user experience while searching for specific log information. Additionally, improved the functionality of date filters by precisely defining start and end timestamps, and adjusted filter selections to show results within a specified range.

--- a/assets/src/index.scss
+++ b/assets/src/index.scss
@@ -250,3 +250,8 @@ th#event_meta {
   from { max-height: 0 }
   to { max-height: 600px }
 }
+
+
+select.ld-select + .select2-container .select2-selection--single {
+  height: 30px;
+}
